--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,65 +8,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <script type="text/javascript">
-      function googleTranslateElementInit() {
-        new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'ar,zh-CN,nl,en,fr,de,it,pt,ru,es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-      }
-    </script>
-    <title>{% block title %}{% endblock %} - Santa Barbara High School</title>
+    <title>{% block title %}{% endblock %} - SBHSPlatform</title>
   </head>
-
+  
   <body>
-    <div class="top">
-      <a href="https://sbhs.sbunified.org" class="heading">
-        <img src="/static/images/sbhs_logo.png" alt="logo" width="40" height="56"> <!-- Logo, linked to SBHS website -->
-      </a>
-      <h2 class="heading">SBHS Parent Board</h2> <!-- Title -->
-      <div id="google_translate_element" class="heading"></div> <!-- Google Translate -->
-    </div>
-    <div class="navbar navbar-default"> <!-- Navbar, Collapsable for smaller screen sizes -->
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand">Navigation</a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar">
-          <ul class="nav navbar-nav navbar-left">
-            <li {% if page == "information" %} class="active" {% endif %}><a href="/.">Information</a></li>
-            <li {% if page == "englishlearnerforum" %} class="active" {% endif %}><a href="/englishlearnerforum">English Language Learner Forum</a></li>
-            <li {% if page == "specialeducationforum" %} class="active" {% endif %}><a href="/specialeducationforum">Special Education Forum</a></li>
-            {% if logged_in %}<li {% if page == "adminLog" %} class="active" {% endif %}><a href="/adminLog">Administrator Logs</a></li>{% endif %}
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li {% if page == "login" %} class="active" {% endif %}>  {% if logged_in %}<a href="/logout">Logout</a>{% else %}<a href="/login">Admin Login</a>{% endif %}</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="content">{% block content %}{% endblock %}</div> <!-- All html from other html pages are inserted here -->
-    <footer> <!-- footer of the website -->
-      <div class="footerBox">
-        <table>
-          <tr class="noBorder">
-            <td><img src="static/images/SB.jpg" alt="SBHSLogo" class="footerIm"></td>
-            <td class = "footerText"> <u> Santa Barbara High School </u> <br> 700 East Anapamu St. Santa Barbara, CA 93103 <br> Phone: (805) 966-9101 <br> TDD: (805) 966-9101 x281 <br> Fax: (805) 965-6872</td>
-          </tr>
-        </table>
-        <table class="links">
-          <tr class="noBorder">
-            <td><a href="https://www.sbunified.org/accessibility-statement" class="footerLinks">Accessibility</a>&nbsp;&nbsp;<a href="https://www.sbunified.org/nondiscrimination-statement" class="footerLinks">Nondiscrimination</a>&nbsp;&nbsp;<a href="https://resources.finalsite.net/images/v1573553487/sbunifiedorg/thovsnlwz00m6wxkslzc/CampusMap.pdf" class="footerLinks">Campus Map</a>&nbsp;&nbsp;<a href="https://docs.google.com/spreadsheets/d/1PAqiCtvm36wrJq3E0sKqzX_EGm7gxaJnZOuAUkyN9P8/edit#gid=1943838488" class="footerLinks">Contact SBHS</a>&nbsp;&nbsp;<a href="https://www.sbunified.org/support/contact-us" class="footerLinks">Contact School District</a></td>
-          </tr>
-        </table>
-      </div>
-    </footer>
   </body>
 </html>
