--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>{% block title %}{% endblock %} - SBHSPlatform</title>
   </head>
-  
+    {% block body}{% endblock %}
   <body>
   </body>
 </html>
