--- a/templates/login.html
+++ b/templates/login.html
@@ -10,12 +10,27 @@
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <link   rel="stylesheet" 
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+        crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
+        crossorigin="anonymous">
+</script>
     <title>Login - Santa Barbara High School</title>
   </head>
 
   <body>
     <p>Hello world!</p>
-    <div class="g-signin2" data-onsuccess="onSignIn" href="/login">Google Login</div>
+    <div class="row">
+      <div class="col-md-3">
+        <a class="btn btn-outline-dark" href="/users/googleauth" role="button" style="text-transform:none">
+          <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+          Login with Google
+        </a>
+      </div>
+    </div>
     <a class="button" href="/login">Google Login</a>
     {% if current_user.is_authenticated %}
   Hi {{ current_user.name }}!
