--- a/templates/login.html
+++ b/templates/login.html
@@ -10,19 +10,28 @@
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <link   rel="stylesheet" 
+    <link rel="stylesheet" 
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
         crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
         crossorigin="anonymous">
-</script>
+    </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <title>Login - Santa Barbara High School</title>
   </head>
 
   <body>
-    <p>Hello world!</p>
+    <div class="col s12 m6 offset-m3 center-align">
+      <a class="oauth-container btn darken-4 white black-text" href="/users/google-oauth/" style="text-transform:none">
+        <div class="left">
+          <img width="20px" style="margin-top:7px; margin-right:8px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+        </div>
+        Login with Google
+      </a>
+    </div>
     <div class="row">
       <div class="col-md-3">
         <a class="btn btn-outline-dark" href="/users/googleauth" role="button" style="text-transform:none">
@@ -38,4 +47,4 @@
     {{ d }}
   </body>
 </html>
-<!-- Cat/dog/hamster gif on windowsill switch-->
+<!-- Cat/dog/hamster gif on windowsill switch Error Message, Google Logo/Mascot Themed by art-->
