--- a/templates/login.html
+++ b/templates/login.html
@@ -22,8 +22,9 @@
           Google Login
         </a>
       </div>
-      <p id="log-in-footer">Error Message/</p>
+      <p id="log-in-footer">Error Message</p>
     </div>
+      
     <a class="button" href="/login">Google Login</a>
     {{ a }}
     {{ b }}
