--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
       <p id="log-in-header">SBHS Platform</p>
       <div id="log-in-button">
         <a class="button" id="log-in-link" href="/login">
-          <img width="20px" id="google-logo" alt="Google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"
+          <img width="20px" id="google-logo" alt="Google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">
           Google Login
         </a>
       </div>
