--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
           Continue with Google
         </a>
       </div>
-      <p id="log-in-footer">Error Message</p>
+      <p id="log-in-footer"> {{ log_in_error }} </p>
     </div>
       
     <a class="button" href="/login">Google Login</a>
