--- a/templates/login.html
+++ b/templates/login.html
@@ -16,8 +16,8 @@
   <body>
     <div id="log-in-container">
       <p id="log-in-header">SBHS Platform</p>
-      <div id="log-in-button" href="/login">
-        <a class="button" id="log-in-link">
+      <div id="log-in-button">
+        <a id="log-in-link" href="/login">
           <img width="20px" id="google-logo" alt="Google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">
           Continue with Google
         </a>
