--- a/templates/login.html
+++ b/templates/login.html
@@ -10,11 +10,22 @@
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <title>Login - Santa Barbara High School</title>
   </head>
 
   <body>
-    <div id="log-in-container">
+    <div class="col s12 m6 offset-m3 center-align">
+      <a class="oauth-container btn darken-4 white black-text" href="/users/google-oauth/" style="text-transform:none">
+          <div class="left">
+            <img width="20px" style="margin-top:7px; margin-right:8px" alt="Google sign-in" 
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+          </div>
+          Login with Google
+      </a>
+    </div>
+<!--     <div id="log-in-container">
       <p id="log-in-header">SBHS Platform</p>
       <div id="log-in-button">
         <a id="log-in-link" href="/login">
@@ -23,7 +34,7 @@
         </a>
       </div>
       <p id="log-in-footer"> {{ log_in_error }} </p>
-    </div>
+    </div> -->
       
     <a class="button" href="/login">Google Login</a>
     {{ a }}
