--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-<!--     <div id="log-in-container">
+    <div id="log-in-container">
       <p id="log-in-header">SBHS Platform</p>
       <div id="log-in-button">
         <a id="log-in-link" href="/login">
@@ -23,7 +23,7 @@
         </a>
       </div>
       <p id="log-in-footer"> {{ log_in_error }} </p>
-    </div> -->
+    </div>
       
     <a class="button" href="/login">Google Login</a>
     {{ a }}
