--- a/static/style.css
+++ b/static/style.css
@@ -19,6 +19,9 @@
   background-color: white;
   color: black;
 }
+#log-in-button:hover {
+  background-color: #fcfcfc;
+}
 #log-in-link:hover {
   text-decoration: none;
 }
