--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,6 @@
+body {
+  background-color: aliceblue;
+}
 #log-in-container {
   margin: 0 auto;
   width: 400px;
@@ -32,3 +35,4 @@
 #log-in-footer {
   color: #dc3544;
 }
+
