--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
         <a id="log-in-link" href="/login">
           <div id="log-in-button">
           <img width="20px" id="google-logo" alt="Google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">
-            <p id="log-in-text">Continue with Google</p>
+            <p id="log-in-text"><b>Continue with Google</b></p>
           </div>
         </a>
       <p id="log-in-footer"> {{ log_in_error }} </p>
