--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,6 @@
+body {
+  background-image: linear-gradient(aliceblue, purple);
+}
 #log-in-container {
   margin: 0 auto;
   margin-top: 100px;
@@ -13,6 +16,7 @@
 #log-in-button {
 
   margin: auto;
+  margin-top: 20px;
   width: 260px;
   height: 40px;
   box-shadow: 0 4px 7px -2px gray;
@@ -38,8 +42,14 @@
   display: inline;
 }
 #log-in-footer {
+  margin-top: 10px;
   color: #dc3544;
 }
+
+
+
+
+
 
 
 
