--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
             <p id="log-in-text">Continue with Google</p>
           </div>
         </a>
-      <p id="log-in-footer"> {{ log_in_error }} </p>
+      <p id="log-in-footer"> {{ login_error }} </p>
     </div>
   </body>
 </html>
