--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
   <body>
     <div id="log-in-container">
       <p id="log-in-header">SBHS Platform</p>
-        <a id="log-in-link" href="/login" method="post">
+        <a id="log-in-link" href="/login">
           <div id="log-in-button">
           <img width="20px" id="google-logo" alt="Google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png">
             <p id="log-in-text">Continue with Google</p>
