--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,8 @@
   width: 400px;
   height: 200px;
   text-align: center;
-  border: 1px solid black;
-
+  box-shadow: 0 4px 7px -2px gray;
+  /* Gradient for Each Month's Theme? */
 }
 #log-in-header {
   padding-top: 30px;
@@ -16,11 +16,11 @@
   margin-top: 20px;
   width: 260px;
   height: 40px;
-  box-shadow: 0 4px 7px -2px gray;
   line-height: 36px;
   text-align: center;
   background-color: white;
   color: black;
+  border: 1px solid grey;
   border-radius: 3px;
 
 }
