--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@
   height: 200px;
   text-align: center;
   box-shadow: 0 4px 7px -2px gray;
-  /* Gradient for Each Month's Theme? */
+  /* Gradient for Each Month's Theme? + Opacity 0.5 */
 }
 #log-in-header {
   padding-top: 30px;
