--- a/static/style.css
+++ b/static/style.css
@@ -20,7 +20,7 @@
   text-align: center;
   background-color: white;
   color: black;
-  border: 1px solid grey;
+  border: 1px solid #dadce0;
   border-radius: 3px;
 
 }
