--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <title>SBHS Platform</title>
+    <title>Santa Barbara High School</title>
   </head>
   <body>
-    <p>"hello"</p>
+    <p>hello</p>
   </body>
 </html>
