--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
     <title>Santa Barbara High School</title>
   </head>
   <body>
-    <p>hello</p>
+    <div id="content">
+      <p>Content</p>
+    </div>
+    <div id="footer">
+      <p>Footer</p>
+    </div>
   </body>
 </html>
