--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,12 @@
       <p>Content</p>
     </div>
     <div id="footer">
-      <p>Footer</p>
+      <div id="profile">
+      </div>
+      <div id="spaces">
+      </div>
+      <div id="observe">
+      </div>
     </div>
   </body>
 </html>
