--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,54 @@
 #content {
+  width: 100%;
+  height: 1000px;
+  background-color: #dadce0;
 }
 
 #footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  overflow:hidden;
+}
+#footer:after {
+  content: "";
+  display: block;
+  position: absolute;
+  border: 50px solid transparent;
+  border-bottom: 50px solid #dadce0;
+  top: -82px;
+  right: -65px;
+  transform: rotate(45deg);
 }
 
 #profile {
+  display: inline-block;
+  width: 190px;
+  height: 36px;
+  margin-left: 120px;
+  margin-top: 7px;
+  border-radius: 2px;
+  border: 1px solid #dadce0;
 }
 
-#spaces [
+#spaces {
+  display: inline-block;
+  width: 500px;
+  height: 36px;
+  margin-left: 80px;
+  margin-top: 7px;
+  border-radius: 2px;
+  border: 1px solid #dadce0;
 }
 
 #observe {
+  display: inline-block;
+  width: 58px;
+  height: 36px;
+  margin-left: 120px;
+  margin-top: 7px;
+  border-radius: 2px;
+  border: 1px solid #dadce0;
 }
