--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,12 @@
     <title>Santa Barbara High School</title>
   </head>
   <body>
-    <div id="content">
+    <div id="background">
+    </div>
+    <div id="create">
+    </div>
+    
+<!--     <div id="content">
       <p>Content</p>
     </div>
     <div id="footer">
@@ -22,6 +27,6 @@
       </div>
       <div id="observe">
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
