--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,7 @@
   <body>
     <div id="background">
     </div>
-    <div id="create">
-    </div>
+    <img src="/static/images/ppicons-plus.svg" alt="create" class="create">
     
 <!--     <div id="content">
       <p>Content</p>
