--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="background">
     </div>
-    <img src="/static/images/ppicons-plus.svg" alt="create" class="create">
+    <img src="/static/images/ppicons-plus.svg" alt="create" class="create" style="width:100px;height:100px;">
     
 <!--     <div id="content">
       <p>Content</p>
