--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <title>Santa Barbara High School</title>
   </head>
   <body>
-    <img src="/static/images/temp-background.svg" alt="background" class="background">
+    <img src="/static/images/temp-background.jpeg" alt="background" class="background">
     <img src="/static/images/ppicons-plus.svg" alt="create" class="create" style="width:100px;height:100px;">
     
 <!--     <div id="content">
