--- a/static/login.css
+++ b/static/login.css
@@ -1,3 +1,11 @@
+#background {
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+
+
+
 #log-in-container {
   margin: 0 auto;
   margin-top: 80px;
