--- a/static/login.css
+++ b/static/login.css
@@ -5,7 +5,8 @@ body {
 #background {
   background-repeat: no-repeat;
   background-position: 0 0;
-  background-size: cover;
+  width: 100px;
+/*   background-size: cover; */
 }
 
 
