--- a/static/login.css
+++ b/static/login.css
@@ -2,9 +2,13 @@ body {
   height: 100%;
   width: 100%;
 }
+/* make images and create button undraggable */
 #background {
-  min-width: 100%;
-  min-width: 100%;
+  background: url(images/temp-background.jpeg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 
