--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,18 @@
-#content {
+body {
+  height: 100%;
+  width: 100%;
+}
+/* make images and create button undraggable */
+#background {
+  background: url(images/temp-background.jpeg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
+/* #content {
   width: 100%;
   height: 1000px;
   background-color: #dadce0;
@@ -51,4 +65,4 @@
   margin-top: 7px;
   border-radius: 2px;
   border: 1px solid #dadce0;
-}
+} */
