--- a/templates/login.html
+++ b/templates/login.html
@@ -11,6 +11,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <title>Login - Santa Barbara High School</title>
+    
+    
+    <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="apple.js"></script>
+    
   </head>
 
   <body>
@@ -24,6 +30,7 @@
         </a>
       <p id="log-in-footer"> {{ login_error }} </p>
     </div>
+    <div id="test"></div>
   </body>
 </html>
 <!-- Cat/dog/hamster gif on windowsill switch Error Message, Google Logo/Mascot Themed by art-->
