--- a/templates/login.html
+++ b/templates/login.html
@@ -13,9 +13,9 @@
     <title>Login - Santa Barbara High School</title>
     
     
-    <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="apple.js"></script>
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="like_button.js"></script>
     
   </head>
 
@@ -29,8 +29,8 @@
           </div>
         </a>
       <p id="log-in-footer"> {{ login_error }} </p>
+      <div id="like_button_container"></div>
     </div>
-    <div id="test"></div>
   </body>
 </html>
 <!-- Cat/dog/hamster gif on windowsill switch Error Message, Google Logo/Mascot Themed by art-->
