--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
     <div id="like_button_container"></div>
     <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="like_button.js"></script>
+    <script src="/like_button.js"></script>
     
   </body>
 </html>
