--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="background"></div>
-    <img src="/static/images/ppicons-plus.svg" alt="create" id="create" style="width:100px;height:100px;">
+    <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:100px;height:100px;"></button>
     
 <!--     <div id="content">
       <p>Content</p>
