--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,28 @@
 body {
   height: 100%;
   width: 100%;
+  overflow: hidden;
+}
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
 /* make images and create button undraggable */
 #background {
+  width: 100px;
+  height: 100px;
   background: url(images/temp-background.jpeg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-
+#create {
+  float: right;
+}
 
 /* #content {
   width: 100%;
