--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,9 @@
     <title>Santa Barbara High School</title>
   </head>
   <body>
-    <div id="background"></div>
-    <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:100px;height:100px;"></button>
+    <div id="background">
+      <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:100px;height:100px;"></button>
+    </div>
     
 <!--     <div id="content">
       <p>Content</p>
