--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
       <div id="observe">
       </div>
       <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:20px;height:20px;"></button>
+      <div id="chat"></div>
     </div>
   </body>
 </html>
