--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,10 @@
       </div>
       <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:20px;height:20px;"></button>
       <div id="chat"></div>
+      <form>
+        <input type="text" placeholder="Enter message">
+        <button type="submit">Send</button>
+      </form>
     </div>
   </body>
 </html>
