--- a/static/style.css
+++ b/static/style.css
@@ -47,21 +47,11 @@ img { /* make images and create button undraggable */
   border: 1px solid #dadce0;
 }
 /* add a min width and responsive thing to spaces */
-#spaces {
+#spaces {/* arrow key rolling between each space shown below */
   display: inline-block;
   width: 200px;
   height: 36px;
   margin-left: 70px;
-  margin-top: 7px;
-  border-radius: 2px;
-  border: 1px solid #dadce0;
-}
-/* arrow key rolling between each space shown below */
-#observe {
-  display: inline-block;
-  width: 58px;
-  height: 36px;
-  margin-left: 120px;
   margin-top: 7px;
   border-radius: 2px;
   border: 1px solid #dadce0;
