--- a/templates/index.html
+++ b/templates/index.html
@@ -31,4 +31,8 @@
       </div>
       <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
   </body>
+  <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
+  <script>
+    const socket = io.connect("https://sbhs-platform.herokuapp.com");
+  </script>
 </html>
