--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,6 @@
   </body>
   <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
   <script>
-    const socket = io.connect("https://sbhs-platform.herokuapp.com");
+    const socket = io.connect("192.168.50.1");
   </script>
 </html>
