--- a/static/style.css
+++ b/static/style.css
@@ -47,9 +47,11 @@ img { /* make images and create button undraggable */
   border: 1px solid #dadce0;
 }
 /* add a min width and responsive thing to spaces */
+/* Some math is needed for the width responsiveness; take 1 - percentage of the profile pixels*/
 #spaces {/* arrow key rolling between each space shown below */
   display: inline-block;
-  width: 200px;
+  width: 62%;
+  min-width: 100px;
   height: 36px;
   margin-left: 70px;
   margin-top: 7px;
