--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,6 @@
   </body>
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
+    const socket = io("https://sbhs-platform.herokuapp.com");
   </script>
 </html>
