--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
       </div>
   </body>
   <script src="/socket.io/socket.io.js"></script>
-  <script>
+  <script type="module">
     import { createServer } from "http";
     import { Server } from "socket.io";
 
