--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,6 @@
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.min.js"></script>
   <script>
-    const socket = io();
+    const socket = io("https://sbhs-platform.herokuapp.com/sbhs");
   </script>
 </html>
