--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,8 @@
         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
       </div>
   </body>
-  <script src="https://sbhs-platform.herokuapp.com:443/socket.io/socket.io.js"></script>
+  <script src="https://sbhs-platform.herokuapp.com:3001/socket.io/socket.io.js"></script>
   <script>
-    const socket = io("https://sbhs-platform.herokuapp.com");
+    const socket = io("https://sbhs-platform.herokuapp.com:3001");
   </script>
 </html>
