--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,6 @@
   </body>
   <script src="https://sbhs-platform.herokuapp.com:3001/socket.io/socket.io.js"></script>
   <script>
-    const socket = io("https://sbhs-platform.herokuapp.com:3001");
+    const socket = io.connect("https://sbhs-platform.herokuapp.com:3001");
   </script>
 </html>
