--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
       </div>
   </body>
-  <script src="https://sbhs-platform.herokuapp.com:443/socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.min.js"></script>
   <script>
     const socket = io.connect("https://sbhs-platform.herokuapp.com:433");
   </script>
