--- a/templates/index.html
+++ b/templates/index.html
@@ -39,5 +39,10 @@
         username: "Yo"
       })
     })
+    socket.on("join_room_announcement", function(data) {
+      const newMode = document.createElement("div");
+      newMode.innerHTML = "${data.username}has joined"
+      document.getElementByID("chat").appendChild(newMode);
+    })
   </script>
 </html>
