--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,10 @@
   </body>
   <script src="https://cdn.socket.io/4.3.1/socket.io.min.js"></script>
   <script>
+    alert("reached here");
     const socket = io.connect("https://sbhs-platform.herokuapp.com:433");
     socket.on("connect", function() {
+      alert("reached here 2");
       socket.emit("join_room", {
         username: "Yo"
       })
