--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
   <body>
     <div id="background">
       <div id="chat"></div>
-        <form>
-          <input type="text" placeholder="Enter message">
+        <form id="send_message">
+          <input type="text" id="message" placeholder="Enter message">
           <button type="submit">Send</button>
         </form>
       </div>
