--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
   <script>
-    //const socket = io.connect();
-    const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
+    const socket = io.connect();
+    //const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
     socket.on("connect", function () {
       alert("reached here 2");
       socket.emit("join_room", {
