--- a/templates/index.html
+++ b/templates/index.html
@@ -31,22 +31,23 @@
         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
       </div>
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
   <script>
     const socket = io.connect();
+    alert("reached here 2");
     //const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
-    socket.on("connect", function () {
-      alert("reached here 2");
-      socket.emit("join_room", {
-        username: "Yo",
-        room: "1"
-      })
-    });
-    socket.on("join_room_announcement", function (data) {
-      alert(data);
-      const newMode = document.createElement("div");
-      newMode.innerHTML = "${data.username}has joined";
-      document.getElementByID("chat").appendChild(newMode);
-    });
+    //socket.on("connect", function () {
+    //  alert("reached here 2");
+    //  socket.emit("join_room", {
+    //    username: "Yo",
+    //   room: "1"
+    //  })
+    //});
+    //socket.on("join_room_announcement", function (data) {
+    //  alert(data);
+    //  const newMode = document.createElement("div");
+    //  newMode.innerHTML = "${data.username}has joined";
+    //  document.getElementByID("chat").appendChild(newMode);
+    //});
   </script>
 </html>
