--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   </body>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
   <script>
-    const socket = io.connect("https://sbhs-platform.herokuapp.com");
+    const socket = io.connect(window.location.origin);
     alert("reached here 2");
     //const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
     //socket.on("connect", function () {
