--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
   <script>
     var socket = io.connect('https://sbhs-platform.herokuapp.com');
-    alert("reached here 2");
-    alert(window.location.origin);
+    alert(window.location.port);
     //const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
     //socket.on("connect", function () {
     //  alert("reached here 2");
