--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   </body>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
   <script>
-    var socket = io('https://sbhs-platform.herokuapp.com');
+    var socket = io.connect('https://sbhs-platform.herokuapp.com:433');
     alert(window.location.port);
     //const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
     //socket.on("connect", function () {
