--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,9 @@
         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
       </div>
   </body>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.min.js"></script>
   <script>
-    var socket = io.connect('https://sbhs-platform.herokuapp.com:433');
+    var socket = io.connect('https://sbhs-platform.herokuapp.com');
     alert(window.location.port);
     //const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
     //socket.on("connect", function () {
