--- a/templates/index.html
+++ b/templates/index.html
@@ -10,25 +10,6 @@
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Santa Barbara High School</title>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
-  <script>
-    var socket = io.connect('https://sbhs-platform.herokuapp.com');
-    alert(window.location.port);
-    //const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
-    //socket.on("connect", function () {
-    //  alert("reached here 2");
-    //  socket.emit("join_room", {
-    //    username: "Yo",
-    //   room: "1"
-    //  })
-    //});
-    //socket.on("join_room_announcement", function (data) {
-    //  alert(data);
-    //  const newMode = document.createElement("div");
-    //  newMode.innerHTML = "${data.username}has joined";
-    //  document.getElementByID("chat").appendChild(newMode);
-    //});
-  </script>
   </head>
   <body>
     <div id="background">
@@ -50,4 +31,23 @@
         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
       </div>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
+  <script>
+    var socket = io.connect('https://sbhs-platform.herokuapp.com');
+    alert(window.location.port);
+    //const socket = io.connect("https://sbhs-platform.herokuapp.com:443");
+    //socket.on("connect", function () {
+    //  alert("reached here 2");
+    //  socket.emit("join_room", {
+    //    username: "Yo",
+    //   room: "1"
+    //  })
+    //});
+    //socket.on("join_room_announcement", function (data) {
+    //  alert(data);
+    //  const newMode = document.createElement("div");
+    //  newMode.innerHTML = "${data.username}has joined";
+    //  document.getElementByID("chat").appendChild(newMode);
+    //});
+  </script>
 </html>
