--- a/templates/index.html
+++ b/templates/index.html
@@ -39,8 +39,8 @@
       socket.emit("join_room", {
         username: "Yo",
         room: "1"
-      })
-      alert("hi");
+      });
+      alert("hi :0");
     });
     socket.on("join_room_announcement", function (data) {
       alert("hi");
