--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
   <script>
-    const socket = io.connect('https://sbhs-platform.herokuapp.com');
+    const socket = io();//.connect('https://sbhs-platform.herokuapp.com');
     alert(window.location.port);
     socket.on("connect", function () {
       socket.emit("join_room", {
