--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
   <script>
-    const socket = io();
+    var socket = io();
     alert(window.location.port);
     socket.on("connect", function () {
       socket.emit("join_room", {
