--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>
   <script>
-    var socket = io();
+    var socket = io.connect("https://sbhs-platform.herokuapp.com");
     alert(socket);
     socket.on("connect", function () {
       socket.emit("join_room", {
