--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,8 @@
       })
       alert("1");
       const newMode = document.createElement("div");
-      newMode.innerHTML = "${data.username}has joined";
-      document.getElementByID("chat").appendChild(newMode);
+      newMode.innerHTML = "has joined";
+      document.getElementById("chat").appendChild(newMode);
     });
     socket.on("join_room_announcement", function (data) {
       alert("2");
