--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.js"></script>-->
   <script type="text/javascript" charset="utf-8">
+    $(document).ready(function() {
     var socket = io();
+    socket.emit("join_room", {username: "hi", room: "room1"});
     socket.on("connect", function () {
       socket.emit("join_room", {username: "hi", room: "room1"});
       alert("1");
@@ -47,6 +49,7 @@
       const newMode = document.createElement("div");
       newMode.innerHTML = "has joined";
       document.getElementById("chat").appendChild(newMode);
+    });
     });
   </script>
 </html>
