--- a/templates/index.html
+++ b/templates/index.html
@@ -37,17 +37,17 @@
   <script type="text/javascript" charset="utf-8">
     var socket = io();
     socket.on('connect', function() {
-      socket.emit('join_room', {username: 'hi', room: 'room1'});
+    //  socket.emit('join_room', {username: 'hi', room: 'room1'});
       alert("1");
-      const newMode = document.createElement("div");
-      newMode.innerHTML = "uhgyt joined";
-      document.getElementById("chat").appendChild(newMode);
+    //  const newMode = document.createElement("div");
+    //  newMode.innerHTML = "uhgyt joined";
+    //  document.getElementById("chat").appendChild(newMode);
     });
-    socket.on("join_room_announcement", function (data) {
-      alert("2");
-      const newMode = document.createElement("div");
-      newMode.innerHTML = "has joined";
-      document.getElementById("chat").appendChild(newMode);
+    //socket.on("join_room_announcement", function (data) {
+    //  alert("2");
+    //  const newMode = document.createElement("div");
+    //  newMode.innerHTML = "has joined";
+    //  document.getElementById("chat").appendChild(newMode);
     });
   </script>
 </html>
