--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
     </div> -->
     <div id="footer">
       <div id="profile">
+        <!-- load exclamation mark icon if not showing -->
+        <img src="temp-background.jpeg" alt="pfp" id="profile_picture">
+        
       </div>
       <div id="spaces">
         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
