--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <div id="footer">
       <div id="profile">
         <!-- load exclamation mark icon if not showing -->
-        <img src="images/960x0.jpeg" alt="pfp" id="profile_picture">
+        <img src=url("images/960x0.jpeg") alt="pfp" id="profile_picture">
         
       </div>
       <div id="spaces">
