--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
     });
     socket.on("join_room_announcement", function (data) {
       const newMode = document.createElement("div");
-      newMode.innerHTML = "${data.username} has joined";
+      newMode.innerHTML = data.username + "has joined";
       document.getElementById("chat").appendChild(newMode);
     });
   </script>
